2004-08-18  Ted Gould  <ted@gould.cx>

	* src/file.cpp, src/preferences-skeleton.h:

	Adding the feature that the save and open directories are saved in the
	preferences.  The last one will be used.

2004-08-18  Carl Hetherington  <inkscape@carlh.net>

	* src/widgets/font-selector.cpp: uint -> guint to fix
	compile errors.

	* src/desktop-snap.{cpp,h}: make snap functions aware of the
	type of point they are snapping, so they can decide whether
	to ignore it.

	* src/arc-context.cpp, src/rect-context.cpp,
	src/spiral-context.cpp, src/star-context.cpp,
	src/draw-context.cpp, src/dyna-draw-context.cpp, src/nodepath.cpp,
	src/selection-chemistry.cpp, src/seltrans.cpp:
	temporarily update for changes to snapping API.

	* src/sp-namedview.cpp, src/dialogs/desktop-properties.cpp:
	adapt for small changes to Snapper API.

	* src/select-context.cpp: use new snapping API.

2004-08-17  Bryce Harrington  <bryce@bryceharrington.com>

	*  nodepath.cpp path-chemistry.cpp selection-chemistry.cpp,
	   seltrans.cpp sp-typeset.cpp splivarot.cpp text-context.cpp, 
	   tools-switch.cpp dialogs/find.cpp:  Converting statusbar
	   messages from old style to new, as per
	   http://inkscape.org/cgi-bin/wiki.pl?StatusbarAPI 

2004-06-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/mkdep.pl: Add `by mkdep.pl' to `automatically generated' line.

	* src/dialogs/desktop-properties.cpp:
	  Greater conformance to CodingStyle.  Add FIXME comment.

	* src/sp-namedview.cpp: Tighter scoping for iteration var.
	  Simplify some code by greater use of cheap sp_unit_get_by_id.

2004-06-17  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/arc-context.cpp, src/arc-context.h,
	  src/desktop-events.cpp, src/desktop.cpp, src/desktop.h,
	  src/draw-context.cpp, src/dropper-context.cpp, src/event-context.cpp,
	  src/event-context.h, src/file.cpp, src/interface.cpp, src/knot.cpp,
	  src/managed.h, src/message-context.cpp, src/message-context.h,