@@ -1,0 +1,20 @@
+#ifndef SEEN_LIVAROT_FORWARD_H
+#define SEEN_LIVAROT_FORWARD_H
+
+class Path;
+class Shape;
+struct float_ligne_run;
+
+
+#endif /* !SEEN_LIVAROT_FORWARD_H */
+
+/*
+  Local Variables:
+  mode:c++
+  c-file-style:"stroustrup"
+  c-file-offsets:((innamespace . 0)(inline-open . 0)(case-label . +))
+  indent-tabs-mode:nil
+  fill-column:99
+  End:
+*/
+// vim: filetype=cpp:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
